--- a/templates/base.jade
+++ b/templates/base.jade
@@ -26,6 +26,8 @@ html(ng-app="abelujo")
     link(rel='stylesheet', type='text/css', href='{% static "bower_components/datatables/media/css/jquery.dataTables.min.css" %}')
     link(rel='stylesheet', type='text/css', href='{% static "bower_components/angular-loading-bar/build/loading-bar.min.css" %}')
     link(rel='stylesheet', type='text/css', href='{% static "bower_components/angular-hotkeys/build/hotkeys.min.css" %}')
+    link(href='{% static "bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css', rel='stylesheet')
+
     script(type='text/javascript', src="{% static 'js/build/vendor.js' %}")
     script(type='text/javascript', src="{% static 'js/build/abelujo.js' %}")
     script(type='text/javascript', src='{% url "django.views.i18n.javascript_catalog" %}')
