Show book format (pocket, livre de poche)
just a text field, we don't want to predict all formats, make text
recognition on the scraper side, nor will we query a lot on this field.

closes #54 - Add book information: pocket? (livre de poche)

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -61,6 +61,11 @@
               td {% trans "isbn" %}
               td {{ object.isbn }}
             tr
+              td
+                | {# Translators: format like pocket or big (livre de poche) #}
+                | {% trans "format" %}
+              td {{ object.fmt }}
+            tr
               td {% trans "Source" %}: 
               td
                 a(target="_blank", href="{{ object.details_url }}") {{ object.data_source }}
