--- a/templates/search/searchresults.jade
+++ b/templates/search/searchresults.jade
@@ -114,7 +114,11 @@ div(ng-cloak, ng-show="cards", ng-controller="searchResultsController")
                     b isbn: 
                     span {{ 'card.isbn' |ng}}
 
+
               div(ng-show="show_images") {{ 'card.date_publication' | ng }}
+
+              div(ng-show="show_images && card.fmt") {{ 'card.fmt' | ng }}
+
               div(
                 ng-class="{'text-danger': is_not_available(card.availability)}"
                 ng-show="show_images") {{ 'card.availability' | ng }}
