InventoryController is generic, also for command_receive

--- a/templates/search/command_receive.jade
+++ b/templates/search/command_receive.jade
@@ -18,6 +18,7 @@
 
 {% block content %}
 
+// TODO: we may not need this anymore, since the InventoryCommnand is (intended to be) generic.
 - var controller = 'CommandReceiveController'
 
 include search/inventory_view_component.jade
