(minor) warning: command receive in construction

--- a/templates/search/command_receive.jade
+++ b/templates/search/command_receive.jade
@@ -21,6 +21,11 @@
 // TODO: we may not need this anymore, since the InventoryCommnand is (intended to be) generic.
 - var controller = 'CommandReceiveController'
 
+div.panel.panel-danger(style="margin-top: 5px;")
+          div.panel-heading Attention
+          div.panel-body
+            div This page is still under heavy construction !
+
 include search/inventory_view_component.jade
 
 {% endblock content %}
