--- a/templates/search/command_receive.jade
+++ b/templates/search/command_receive.jade
@@ -19,12 +19,13 @@
 {% block content %}
 
 // TODO: we may not need this anymore, since the InventoryCommnand is (intended to be) generic.
-- var controller = 'CommandReceiveController'
+//- - var controller = 'CommandReceiveController'
+- var controller = 'inventoryNewController'
 
 div.panel.panel-danger(style="margin-top: 5px;")
           div.panel-heading Attention
           div.panel-body
-            div This page is still under heavy construction !
+            div This page has the basic features but is still under heavy construction.
 
 include search/inventory_view_component.jade
 
