fixes #65 - Bad ongoing commands url: en/ongoing instead of en/commans/ongoing

--- a/templates/search/to_command.jade
+++ b/templates/search/to_command.jade
@@ -40,7 +40,7 @@ div(ng-cloak, ng-controller="basketToCommandController")
     li.active(role="presentation")
       a(href="#") {% trans "To command" %}
     li#ongoing(role="presentation")
-      a(href="ongoing") {% trans "Commands ongoing" %}  
+      a(href="/commands/ongoing") {% trans "Commands ongoing" %}  
         span.badge.ng-cloak(title='{% trans "Number of ongoing commands." %}')   {{ "ongoing_commands_nb" | ng }}
 
   .col-md-2
