Inventory UI++ (with a clean table at top)

--- a/templates/search/command_receive.jade
+++ b/templates/search/command_receive.jade
@@ -22,10 +22,10 @@
 //- - var controller = 'CommandReceiveController'
 - var controller = 'inventoryNewController'
 
-div.panel.panel-danger(style="margin-top: 5px;")
-          div.panel-heading Attention
-          div.panel-body
-            div This page has the basic features but is still under heavy construction.
+div.bg-danger
+  span
+    i.glyphicon.glyphicon-info-sign
+  span This page has the basic features but is still under heavy construction.
 
 include search/inventory_view_component.jade
 
