Card UI: hide reviews (not satisfactory)

--- a/templates/search/card_show.jade
+++ b/templates/search/card_show.jade
@@ -135,7 +135,7 @@
           else
             div
 
-   .row
+   //- .row
           {% include "search/card_reviews.jade" %}
 
   .col-lg-3
@@ -172,7 +172,6 @@
                       | x{{ cmd.qty }} -
                       | <a href="{{ cmd.command.get_absolute_url }}">{{ cmd.command.title }}</a> -
                       | {{ cmd.command.created }}
-
 
 
 
